Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.13.2
-
Fix Version/s: 5.13.2
-
Component/s: GUI: Font handling
-
Labels:None
-
Platform/s:
-
Commits:90d94c1c2c3571d48c7b8c2d6ba98ae4a9a28f0b (qt/qtbase/5.13.2)
Description
After https://codereview.qt-project.org/c/qt/qtbase/+/275170, emojis are no longer working at all on macOS, as illustrated by the Lancelot test:
http://lancelot.intra.qt.io/SlowCycle/tst_Scenegraph/auto-reports/Report_Sep27-013858.html